<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ga_api_key">UA-29576645-1</string>
    <string name="feed_tips1">"The app is completed free,will only produce in the course of the communications。Details, please consult your local mobile operator, Whether to allow the application to establish a connection?
"</string>
    <string name="feed_tips2">All software and applications are third party products and provided as is. Motorola or tis subsidiaries make no representations or warranties, expressly or impliedly. By way of example but not of limitation, Motorola or its subsidiaries make no representations or warranties of merchantability or fitness for a particular purpose, or that the use of the software and applications will not infringe any intellectual property rights. Motorola or its subsidiaries shall not be liable for any damages of any kind arising out of or relating to the use or inability to use the software and application and services thereof Amendment and availability of these software and applications are subject to change without any prior notice. The activation of the application could generate data traffic. For data traffic tariff standard, please consult your relevant local operator.</string>
    <string name="feed_tips3">Not remember me!</string>
    <string name="feed_tips4">Disclaimer</string>
    <string name="feed_tips5">Agree</string>
    <string name="feed_tips6">Exit</string>
    <string name="welcome">Welcome to WoChaCha</string>
    <string name="app_name">MyChaCha</string>
    <string name="drug_drugstore">有售药店</string>
    <string name="drug_drugdetail">药品详情</string>
    <string name="drug_drugmanufactur">同名厂家</string>
    <string name="uploadprice_select_storename">请选择商家</string>
    <string name="uploadprice_select_substorename">请选择门店</string>
    <string name="businesspromotion_select_kinds">选择类别</string>
    <string name="businesspromotion_select_sorttype">选择排序方式</string>
    <string name="merchant_select_distance">选择距离</string>
    <string name="merchant_select_sorttype">选择分类方式</string>
    <string name="rank_times">累计扫描次数：</string>
    <string name="autofocus_1">自动识别</string>
    <string name="autofocus_2">支持</string>
    <string name="autofocus_3">不支持</string>
    <string name="cam_0">自动检测</string>
    <string name="cam_1">YUYV</string>
    <string name="cam_2">UYUV</string>
    <string name="cam_3">平坦YUV</string>
    <string name="result_text">Found plain text</string>
    <string name="result_product">获得编码</string>
    <string name="backCamera">后置摄像头</string>
    <string name="frontCamera">前置摄像头</string>
    <string name="flashTorch">通用TORCH方式</string>
    <string name="flashOn">通用ON方式</string>
    <string name="flashAuto">通用AUTO方式</string>
    <string name="flashRedEye">通用REDEYE方式</string>
    <string name="flashMoto">MOTO特殊方式</string>
    <string name="select_goods">请选择商品</string>
    <string name="select_format">请选择条码类型</string>
    <string name="select_keyword_type">请选择关键字类型</string>
    <string name="select_goods_type">请选择商品类型</string>
    <string name="select_goods_subtype">请选择商品子类型</string>
    <string name="select_shop_district">请选择商户所在区县</string>
    <string name="select_shop_area">请选择商户所在商圈</string>
    <string name="select_shop_type">请选择商户分类</string>
    <string name="inputbarcode">请输入条码:</string>
    <string name="scanact">扫描切换</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_type">类型</string>
    <string name="QR_ContentsTitle">条形码信息</string>
    <string name="QR_NameLabel">姓名：\u0009</string>
    <string name="QR_MobileLabel">移动电话：</string>
    <string name="QR_TelLabel">固定电话：</string>
    <string name="QR_AddressLabel">地址：\u0009</string>
    <string name="QR_EmailLabel">邮箱：\u0009</string>
    <string name="QR_WebLabel">网址：\u0009</string>
    <string name="QR_RailDeparturetimeLabel">开车时间：</string>
    <string name="QR_RailTicketNoLabel">火车票编号：</string>
    <string name="QR_AddToContacts">添加到通讯录</string>
    <string name="city_sel_point">按热门城市选择</string>
    <string name="barinput_empty">请输入条形码</string>
    <string name="barinput_uni">请输入8/13位一维码</string>
    <string name="barinput_wepc">请输入9位WEPC商户码</string>
    <string name="city_sel_province">按省份选择</string>
    <string name="city_point">热门城市</string>
    <string name="MenuHelp">帮助</string>
    <string name="MenuFeedBack">反馈</string>
    <string name="MenuUpdate">版本更新</string>
    <string name="MenuSetting">设置</string>
    <string name="MenuAbout">关于</string>
    <string name="MenuExit">退出</string>
    <string name="quit_title">退出我查查</string>
    <string name="quit_desc">确认是否立即退出我查查？</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="weibologin">登录</string>
    <string name="register">短信注册</string>
    <string name="EditTextName">新浪微博帐号</string>
    <string name="EditTextPassword">密码</string>
    <string name="weibotitle">新浪微博</string>
    <string name="UploadSDCardIsFull">SD卡空间不足!,请清理后重试</string>
    <string name="reg_item1">编辑字母m+密码(6-10位数字或英文字母),如m123456,发送至:</string>
    <string name="reg_item3">"发送短信注册我查查,费用0.1元,由运营商收取;
 1.发送注册短信我查查不收取任何费用.
 2.手机号仅用于个人登录,其他用户不可见."</string>
    <string name="tips_nosms">未检测到SIM卡，无法使用短信功能</string>
    <string name="title_sina">用新浪微博帐号登录</string>
    <string name="title_qq">用腾讯QQ帐号登录（即将开放）</string>
    <string name="title_renren">用人人网帐号登录（即将开放）</string>
    <string name="title_kaixin">用开心网帐号登录（即将开放）</string>
    <string name="menu_switchcity">切换城市</string>
    <string name="menu_setting">设置</string>
    <string name="menu_update">版本更新</string>
    <string name="menu_sharedwcc">软件分享</string>
    <string name="menu_help">使用帮助</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_service">客服热线</string>
    <string name="menu_cooperate">商务合作</string>
    <string name="menu_about">关于我们</string>
    <string name="menu_statement">免责声明</string>
    <string name="send_fb">发送留言</string>
    <string name="feedbackText">请填写您的宝贵意见,我们期待您的意见和建议.(内容140字以内，不能为空))</string>
    <string name="registersinaweibomsg">我正在使用#我查查条码 比价#手机客户端 玩新浪微博，手机条码照一照，超市价格全知道！还在等什么呢，快来试试吧？</string>
    <string name="registersinaweiboresult">注册新浪微博成功,请稍后查收短信</string>
    <string name="defMessage">\@我查查条码比价 条码比价客户端，查询商品价格，购物省钱好帮手， 请点击：http://www.wochacha.com/download.do了解详情。</string>
    <string name="UpdateVersion_title">版本更新</string>
    <string name="UpdateNow">立即更新</string>
    <string name="UpdateLater">以后再说</string>
    <string name="DownLoading">下载中，请稍候...</string>
    <string name="CheckingVersion">正在检查更新...</string>
    <string name="NoNewVersion">已经是最新版本</string>
    <string name="DownLoadFailure">网络服务异常，下载更新失败</string>
    <string name="CheckVersionFailure">网络服务异常，检查更新失败</string>
    <string name="HasNewVersion">检查到更新版本</string>
    <string name="scan_2d_message">二维QR码</string>
    <string name="scan_wepc_message">二维WEPC码</string>
    <string name="scan_39_message">快递单(条码过长请横扫)</string>
    <string name="scan_1d_message">一维EAN码</string>
    <string name="scan_descrption">扫描：</string>
    <string name="aboutwcc_cooperation_introduce">产品介绍: 我查查是为广大消费者提供公正中立的商品价格信息平台.</string>
    <string name="aboutwcc_cooperation_usergroup">服务用户群: 使用我查查定制手机, iPhone我查查, Android我查查, WAP, 短信五种方式查询价格信息.</string>
    <string name="aboutwcc_cooperation_contactway">联系方式: 如果您对我们的业务感兴趣, 可将商品价格或促销信息提供给我们, 赶紧联系我们吧!</string>
    <string name="aboutwcc_cooperation_contactpeople">联系人: 刘小姐</string>
    <string name="aboutwcc_cooperation_telephone">4006669301</string>
    <string name="aboutwcc_cooperation_mobilephone">18601955773</string>
    <string name="aboutwcc_cooperation_qqgroup">QQ群: 106872572</string>
    <string name="aboutwcc_cooperation_email">helen_liu@wochacha.com</string>
    <string name="aboutwcc_aboutus_first">我查查信息技术(上海)有限公司成立于2010年1月, 致力于建立一个将图像传感器与互联网相结合, 利用一维商品条码在手机上实现信息查询的物联网系统, 已建立起一个包括超市百货类、 图书音像制品类、数码家电类、医药保健类等300多万种商品的条码信息库。</string>
    <string name="aboutwcc_aboutus_second">我查查信息平台是一个基于移动互联网来实现物联网功能的信息平台, 该平台由移动终端(如手机)、移动互联网和数据库等组成。用户可以利用这个平台或实现勤俭持家, 或快速找到自己欲购买的商品在网店或实体店的价格情况。未来我查查信息平台还将提供手机下单服务, 直接客户订单反馈给商家, 实现足不出户的购买任何商品。</string>
    <string name="aboutwcc_statement_title">我查查用户须知及免责声明:</string>
    <string name="aboutwcc_statement_notice">用户可以免费下载使用我查查软件(以下简称“我查查”), 我查查信息技术(上海)有限公司不收取任何费用。手机由于上网而产生的GPRS流量费用由运营商收取。</string>
    <string name="aboutwcc_statement_first">1. 我查查软件是由我查查信息技术(上海)有限公司(以下简称“我查查公司”)开发。我查查的一切版权等知识产权, 以及与我查查相关的所有信息内容, 包括但不限于: 文字表述及其组合、图标、色彩、界面设计、版面框架等均受知识产权法律法规的保护。</string>
    <string name="aboutwcc_statement_second">2. 不得对我查查进行反向工程、反向汇编、反向编译等修改行为, 非经我查查公司或我查查公司授权发布的其他任何由我查查衍生的软件均属非法, 下载、安装、使用此类软件, 将可能导致不可预知的风险, 由此产生的一切法律责任与纠纷一概与我查查公司无关, 我查查公司不对非官方版软件提供客服支持。</string>
    <string name="aboutwcc_statement_third">3. 我查查坚持公开中立的原则, 为用户提供商品、商家、促销等各类信息, 并保证任何时候均不参与商家或超市的价格等恶劣竞争, 对商超的不正当竞争给用户带来的损失, 由此产生的一切法律责任与纠纷均与我查查公司无关。</string>
    <string name="aboutwcc_statement_fourth">4. 因商家或超市等非我查查的原因, 对所提供信息的真实性和准确性造成影响的, 我查查公司不承担任何责任。</string>
    <string name="aboutwcc_statement_fifth">5. 使用我查查涉及到互联网服务和移动通信服务, 可能会受到各个环节不稳定因素的影响, 存在不可抗力、计算机病毒、黑客攻击、系统不稳定、用户所在位置及其他任何网络、技术、通信线路等原因造成的服务中断或不能满足用户要求的风险, 对非我查查本身的原因造成的风险, 我查查公司不承担任何责任。</string>
    <string name="aboutwcc_statement_sixth">6. 用户通过注册可成为我查查的会员, 我查查公司不会向任何第三方泄露会员的个人隐私信息, 但对非我查查引起的隐私信息泄露, 我查查公司不承担任何责任。</string>
    <string name="logisticsdetail_first">此条码可能已过期或尚未入库,如果条码在我们的查询范围且为2个月内的有效条码,请稍后再试!</string>
    <string name="logisticsdetail_second">(查询范围:支持顺丰/中通/圆通/申通/CCES/FedEx/韵达/海航天天/EMS/汇通/全峰/优速快递/宅急送,如需更多快递请反馈我们.)</string>
    <string name="company_info">"版本 %1$s
我查查信息技术(上海)有限公司"</string>
</resources>
